plugins/kotlin/idea/tests/testData/highlighterMetaInfo/smartCasts/ImplicitAndExplicit_operators.kt.highlighting
interface <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>

interface <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Foo<!> {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>operator<!> fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>plus<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>other<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>)
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>operator<!> fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>unaryPlus<!>()

    <!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>infix<!> fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>customOperator<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>other<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>) {}
}

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Any<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Any<!>) {

    if (this is <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Foo<!> && <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!> is <!HIGHLIGHTING("textAttributesKey='KOTLIN_TRAIT'")!>Bar<!>) {

        <!HIGHLIGHTING("descr='Smart cast to Bar'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!> <!HIGHLIGHTING("descr='Extension implicit receiver smart cast to Foo'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'")!>+<!> <!HIGHLIGHTING("descr='Smart cast to Bar'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!>

        <!HIGHLIGHTING("descr='Extension implicit receiver smart cast to Foo'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'")!>+<!><!HIGHLIGHTING("descr='Smart cast to Bar'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!>

        <!HIGHLIGHTING("descr='Smart cast to Bar'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!> <!HIGHLIGHTING("descr='Extension implicit receiver smart cast to Foo'; textAttributesKey='KOTLIN_SMART_CAST_RECEIVER'"), HIGHLIGHTING("textAttributesKey='KOTLIN_EXTENSION_FUNCTION_CALL'")!>customOperator<!> <!HIGHLIGHTING("descr='Smart cast to Bar'; textAttributesKey='KOTLIN_SMART_CAST_VALUE'"), HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>parameter<!>

    }
}
